[FEATURE & FIX] Perbaikan error pada penamaan field dan logika update adoptions & CRUD table adoption serta response untuk interaksi di table adoption